--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 server.port=${port:8082}
 
 spring.data.mongodb.uri=mongodb://localhost:27017/spring-mongo
+
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
